# RedInk

./: README.md  REFORM_PLAN.md  pyproject.toml
backend/: app.py
backend/prompts/: image_prompt.txt  image_prompt_short.txt  outline_prompt.txt
frontend/: index.html  package.json
frontend/src/: App.vue
frontend/src/assets/css/: variables.css
frontend/src/components/home/: ComposerInput.vue
frontend/src/views/: HomeView.vue  ResultView.vue  SettingsView.vue
